@@ -14,7 +14,14 @@ hs-plugins (1.4.1-3) UNRELEASED; urgency=low
   [ Marco Túlio Gontijo e Silva ]
   * debian/control: Use more sintetic name for Vcs-Darcs.
 
- -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Mon, 13 Jul 2009 11:54:27 -0300
+  [ Iain Lane ]
+   * debian/rules: Do not install .haddock file in -doc package.
+     haskell-devscripts now installs these in -dev packages, but we did not
+     take into account the fact that hs-plugins installs the doc package
+     manually and so the same file was available in both packages, which led to
+     file conflicts and uninstallability. (Closes: #542624)
+
+ -- Iain Lane <laney@ubuntu.com>  Thu, 20 Aug 2009 15:50:08 +0100
 
 hs-plugins (1.4.1-2) unstable; urgency=low
 
